updated CollectionService.java, pom.xml